k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyu-project-service
spec:
  type: ClusterIP
  selector:
    app: nyu-project
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
